[INIT] Initial Commit - Clean up
- Remove linux, macos, windows folders as we won't have a use for them
- Remove HomePage generated code
- Add default initiale route
- Update .gitignore to remove .idea Android Studio directories and files from the vcs sync

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
+
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
@@ -25,3 +26,7 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+#File and directories created by Android Studio
+.idea/*
+.idea
