--- a/tmdb_app/pubspec.yaml
+++ b/tmdb_app/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
+  dio: ^5.4.3+1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
