--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ pubspec.lock
 doc/api/
 
 # dotenv environment variables file
-.env*
+tmdb_app/.env*
 
 # Avoid committing generated Javascript files:
 *.dart.js
