--- a/tmdb_app/pubspec.yaml
+++ b/tmdb_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
