--- a/tmdb_app/pubspec.yaml
+++ b/tmdb_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.3
@@ -50,6 +51,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  mocktail: ^1.0.4
+  build_runner: any
+  riverpod_generator: any
+  test: ^1.25.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
