--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -30,9 +30,11 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+        working-directory: ./tmdb_app/
 
       - name: build runner dependencies
         run: dart run build_runner build --delete-conflicting-outputs
+        working-directory: ./tmdb_app/
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
@@ -47,3 +49,4 @@ jobs:
       # want to change this to 'flutter test'.
       - name: Run tests
         run: flutter test
+        working-directory: ./tmdb_app/
