--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,9 +32,9 @@ jobs:
         run: flutter pub get
         working-directory: ./tmdb_app/
 
-      - name: build runner dependencies
-        run: flutter pub run build_runner build --delete-conflicting-outputs
-        working-directory: ./tmdb_app/
+      #- name: build runner dependencies
+      #  run: flutter pub run build_runner build --delete-conflicting-outputs
+      #  working-directory: ./tmdb_app/
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
