--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,6 +32,6 @@ jobs:
       run: dart run build_runner build --delete-conflicting-outputs
       working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
 
-    - name: Run tests
-      run: flutter test
-      working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
+    #- name: Run tests
+    #  run: flutter test
+    # working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
