--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,36 +7,31 @@ name: Dart
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "dev" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.22.1' # specify your desired Flutter version
 
-      - name: Install dependencies
-        run: dart pub get
+    - name: Install dependencies
+      run: flutter pub get --no-precompile
+      working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
 
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
+    - name: Run build_runner
+      run: dart run build_runner build --delete-conflicting-outputs
+      working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
-
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+    #- name: Run tests
+    #  run: flutter test
+    # working-directory: ./tmdb_app/  # Update this if your Flutter project is in a subdirectory
